
* #564: Add :confval:`autodoc_docstring_signature` which retrieves
  the signature from the first line of the docstring, if it is
  found there.

* #176: Provide ``private-members`` option for autodoc directives.

* #520: Provide ``special-members`` option for autodoc directives.

* #138: Add an ``index`` role, to make inline index entries.

* #443: Allow referencing external graphviz files.

* #221: Add Swedish locale.

* Added ``inline`` option to graphviz directives, and fixed the
  default (block-style) in LaTeX output.

* #521: Added :confval:`linkcheck_ignore` config value.

* #526: Added Iranian translation.

* #559: :confval:`html_add_permalinks` is now a string giving the
  text to display in permalinks.

* #553: Added :rst:dir:`testcleanup` blocks in the doctest extension.


Release 1.0.6 (in development)
==============================

* #574: Add special code for better support of Japanese documents
  in the LaTeX builder.

* Regression of #77: If there is only one parameter given with
  ``:param:`` markup, the bullet list is now suppressed again.

* #556: Fix missing paragraph breaks in LaTeX output in certain
  situations.

* #567: Emit the ``autodoc-process-docstring`` event even for objects
  without a docstring so that it can add content.

* #565: In the LaTeX builder, not only literal blocks require different
  table handling, but also quite a few other list-like block elements.

* #515: Fix tracebacks in the viewcode extension for Python objects
  that do not have a valid signature.

* Fix strange reportings of line numbers for warnings generated from
  autodoc-included docstrings, due to different behavior depending
  on docutils version.

* Several fixes to the C++ domain.


Release 1.0.5 (Nov 12, 2010)
============================

* #557: Add CSS styles required by docutils 0.7 for aligned images
  and figures.

* In the Makefile generated by LaTeX output, do not delete pdf files
  on clean; they might be required images.
